--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.artion.hyrnesistem">
+    package="com.example.artion.task1">
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/app_name1"
+            android:parentActivityName="com.example.artion.task1.LoginActivity">
+
         </activity>
     </application>
 
