--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,12 +19,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".RegisterActivity"
             android:label="@string/app_name1"
-            android:screenOrientation="portrait"
-            android:parentActivityName="com.example.artion.hyrnesistem.LoginActivity">
+            android:parentActivityName=".LoginActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/app_name2"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".LoginActivity"
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
